--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@headlessui/vue": "^1.7.23",
     "@tailwindcss/vite": "^4.1.16",
     "@vee-validate/yup": "^4.15.1",
+    "@vercel/speed-insights": "^1.3.1",
     "axios": "^1.13.2",
     "oh-vue-icons": "^1.0.0-rc3",
     "pinia": "^3.0.4",
